coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__transcript_modal__tests__transcript_modal_mixed_transcript.snap
---
source: app/tui/src/widgets/transcript_modal.test.rs
expression: "render_to_text(&app_state, &transcript, 60, 16)"
---
┌ Transcript ──────────────────────────────────────────────┐
│> Please grep the repo                                    │
│                                                          │
│⏺ Searching now.                                          │
│                                                          │
│● Grep(fn main)                                           │
│  └ src/main.rs:1:fn main() {                             │
│                                                          │
│# notice: Build finished                                  │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jum│
│Tab select · Enter fold · / search · n/N · Esc/q quit     │
└──────────────────────────────────────────────────────────┘
