coco-rs/app/tui/src/widgets/snapshots/coco_tui__widgets__transcript_modal__tests__transcript_modal_short_viewport.snap
---
source: app/tui/src/widgets/transcript_modal.test.rs
expression: "render_to_text(&app_state, &transcript, 60, 6)"
---
┌ Transcript ──────────────────────────────────────────────┐
│⏺ Searching now.                                          │
│                                                          │
│ctrl+o toggle · ↑/↓ scroll · PgUp/PgDn page · Home/End jum│
│Tab select · Enter fold · / search · n/N · Esc/q quit     │
└──────────────────────────────────────────────────────────┘
